objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>締日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>リッチテキスト</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>複数</label>
        <picklist>
            <picklistValues>
                <fullName>はい</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>いいえ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Log名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>